--- a/feasibility/requirements.txt
+++ b/feasibility/requirements.txt
@@ -27,6 +27,7 @@ packaging==25.0
 paho-mqtt==2.1.0
 pandas==2.3.0
 pillow==11.2.1
+plotly==6.2.0
 pluggy==1.6.0
 protobuf==6.31.1
 pyarrow==20.0.0
@@ -48,6 +49,7 @@ smmap==5.0.2
 sniffio==1.3.1
 starlette==0.46.2
 streamlit==1.46.0
+streamlit-autorefresh==1.0.1
 tenacity==9.1.2
 toml==0.10.2
 tornado==6.5.1
