--- a/feasibility/requirements.txt
+++ b/feasibility/requirements.txt
@@ -41,6 +41,7 @@ pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.4
 rpds-py==0.25.1
