--- a/feasibility/requirements.txt
+++ b/feasibility/requirements.txt
@@ -7,8 +7,10 @@ cachetools==6.1.0
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
+colorama==0.4.6
 fastapi==0.115.13
 flake8==7.3.0
+fpdf==1.7.2
 gitdb==4.0.12
 GitPython==3.1.44
 h11==0.16.0
@@ -26,6 +28,7 @@ numpy==2.3.1
 packaging==25.0
 paho-mqtt==2.1.0
 pandas==2.3.0
+patsy==1.0.1
 pillow==11.2.1
 plotly==6.2.0
 pluggy==1.6.0
@@ -39,17 +42,21 @@ pyflakes==3.4.0
 Pygments==2.19.2
 pytest==8.4.1
 python-dateutil==2.9.0.post0
+python-decouple==3.8
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.4
 rpds-py==0.25.1
+scipy==1.16.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 starlette==0.46.2
-streamlit==1.46.0
+statsmodels==0.14.5
+streamlit==1.46.1
+streamlit-aggrid==1.1.6
 streamlit-autorefresh==1.0.1
 tenacity==9.1.2
 toml==0.10.2
