--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -1,30 +1,29 @@
-# Dimensione dello stack principale (più grande per supportare networking e MQTT)
-CONFIG_MAIN_STACK_SIZE=2048
+# Abilita il supporto per la comunicazione seriale (utile per il debug)
+CONFIG_CONSOLE=y
+CONFIG_STDOUT_CONSOLE=y
 
-# Abilita il networking di base
-CONFIG_NETWORKING=y
+CONFIG_GPIO=y
+CONFIG_I2C=y
+CONFIG_SPI=y
+CONFIG_SPI_NOR=y
 
-# Abilita supporto socket di rete
-CONFIG_NET_SOCKETS=y
+# Abilita il supporto per i sensori
+CONFIG_SENSOR=y
+CONFIG_DHT=y                 # Abilita il driver per il sensore DHT22
+CONFIG_BH1750=y              # Abilita il driver per il sensore BH1750
+CONFIG_ADC=y                 # Abilita l'ADC per il sensore di umidità del suolo
 
-# Abilita nomi POSIX per socket (se non usi API POSIX complete)
-CONFIG_NET_SOCKETS_POSIX_NAMES=y
+# Gestione dell'alimentazione
+CONFIG_PM=y                       # Abilita la gestione dell'alimentazione
+CONFIG_PM_DEVICE=y                # Abilita la gestione dell'alimentazione per i dispositivi
+CONFIG_PM_DEVICE_SYSTEM_MANAGED=y # Abilita la gestione dell'alimentazione a livello di sistema 
 
-# Abilita protocolli IP e trasporto
-CONFIG_NET_IPV4=y
-CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
+# Abilita il supporto per la shell (utile per interagire con il sistema)
+CONFIG_SHELL=y
+CONFIG_SHELL_BACKEND_SERIAL=y
+CONFIG_SHELL_HISTORY=y
+CONFIG_SHELL_CMDS_RESIZE=y
 
-# Abilita libreria MQTT client
-CONFIG_MQTT_LIB=y
-
-# Abilita logging generale e di rete (utile per debug)
-CONFIG_LOG=y
-CONFIG_NET_LOG=y
-
-# Abilita ZBUS (bus di messaggi/eventi)
-CONFIG_ZBUS=y
-
-# Numero di canali ZBUS (verifica supporto nella tua versione Zephyr)
-CONFIG_ZBUS_CHANNEL_COUNT=4
-
+CONFIG_LORA=y
+CONFIG_LORA_SX127X=y
+CONFIG_LORA_SHELL=y
