--- a/feasibility/requirements.txt
+++ b/feasibility/requirements.txt
@@ -1,6 +1,7 @@
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
 attrs==25.3.0
 blinker==1.9.0
 cachetools==6.1.0
@@ -8,11 +9,13 @@ certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+databases==0.9.0
 fastapi==0.115.13
 flake8==7.3.0
 fpdf==1.7.2
 gitdb==4.0.12
 GitPython==3.1.44
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -33,6 +36,7 @@ pillow==11.2.1
 plotly==6.2.0
 pluggy==1.6.0
 protobuf==6.31.1
+psycopg2==2.9.10
 pyarrow==20.0.0
 pycodestyle==2.14.0
 pydantic==2.11.7
@@ -46,6 +50,7 @@ python-decouple==3.8
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+redis==6.2.0
 referencing==0.36.2
 requests==2.32.4
 rpds-py==0.25.1
@@ -53,6 +58,7 @@ scipy==1.16.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 starlette==0.46.2
 statsmodels==0.14.5
 streamlit==1.46.1
