--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -1,29 +1,30 @@
-# Abilita il supporto per la comunicazione seriale (utile per il debug)
 CONFIG_CONSOLE=y
 CONFIG_STDOUT_CONSOLE=y
 
 CONFIG_GPIO=y
 CONFIG_I2C=y
 CONFIG_SPI=y
-CONFIG_SPI_NOR=y
 
-# Abilita il supporto per i sensori
 CONFIG_SENSOR=y
-CONFIG_DHT=y                 # Abilita il driver per il sensore DHT22
-CONFIG_BH1750=y              # Abilita il driver per il sensore BH1750
-CONFIG_ADC=y                 # Abilita l'ADC per il sensore di umidità del suolo
 
-# Gestione dell'alimentazione
-CONFIG_PM=y                       # Abilita la gestione dell'alimentazione
-CONFIG_PM_DEVICE=y                # Abilita la gestione dell'alimentazione per i dispositivi
-CONFIG_PM_DEVICE_SYSTEM_MANAGED=y # Abilita la gestione dell'alimentazione a livello di sistema 
+# Se vuoi escludere i driver reali:
+CONFIG_DHT=n
+CONFIG_BH1750=n
 
-# Abilita il supporto per la shell (utile per interagire con il sistema)
+# Abilita ADC solo se serve per sensori reali soil moisture
+CONFIG_ADC=n
+
+CONFIG_PM=y
+CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE_SYSTEM_MANAGED=y
+
 CONFIG_SHELL=y
 CONFIG_SHELL_BACKEND_SERIAL=y
 CONFIG_SHELL_HISTORY=y
 CONFIG_SHELL_CMDS_RESIZE=y
 
 CONFIG_LORA=y
-CONFIG_LORA_SX127X=y
 CONFIG_LORA_SHELL=y
+
+CONFIG_MOCK_SENSOR=y
+
