Zephyr Major update, one step back, esp32_setup.md for qemu esp32 setup

--- a/zephyr-feasibility/CMakeLists.txt
+++ b/zephyr-feasibility/CMakeLists.txt
@@ -1,27 +1,36 @@
 # Specify minimum CMake version
 cmake_minimum_required(VERSION 3.20.0)
 
-set(ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/modules/mock_sensor")
+# Define the Zephyr base directory, which should be set by the environment variable ZEPHYR_BASE
+# The ZEPHYR_BASE variable is usually provided by the Zephyr SDK or your development environment setup
+# In case you want to explicitly set it, you can uncomment the next line:
+# set(ZEPHYR_BASE "/path/to/zephyr")
 
+# Overlay file for the device tree configuration
+set(DTC_OVERLAY_FILE ${CMAKE_CURRENT_SOURCE_DIR}/boards/esp32s3.overlay)
 
-# Add Zephyr Package
+# Add Zephyr package and setup for the project
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-# Name the project
+# Define the project with a version and description
 project(
   vitimonitor
   VERSION 1.0
-  DESCRIPTION ""
+  DESCRIPTION "Temperature monitoring system with sensor reading and LoRa transmission"
   LANGUAGES C
 )
 
-# Locate source code
+# Include the source code file for the application
 target_sources(app PRIVATE src/main.c)
 
-#target_include_directories(app PRIVATE include)
+# Optionally, if you have an include directory for headers, uncomment and adjust as necessary
+# target_include_directories(app PRIVATE include)
 
-# Aggiungi i pacchetti richiesti da Zephyr
+# Add the required Zephyr packages for LoRa support (or other needed packages)
+# Ensure that the LoRa package is available in your Zephyr environment
 zephyr_include_directories(${ZEPHYR_BASE}/subsys/net/lora)
 
-# Overlay
-set(DTC_OVERLAY_FILE ${CMAKE_CURRENT_SOURCE_DIR}/boards/esp32s3.overlay)
+# If your project requires any additional modules, like mock sensors, uncomment the line below:
+# set(ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/modules/mock_sensor")
+
+
