--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -1,30 +1,59 @@
-CONFIG_CONSOLE=y
-CONFIG_STDOUT_CONSOLE=y
+# General configuration settings
+CONFIG_MAIN_STACK_SIZE=2048  # Stack size for the main thread
+CONFIG_KERNEL_BIN_NAME="zephyr"  # Name of the Zephyr kernel binary
 
-CONFIG_GPIO=y
-CONFIG_I2C=y
-CONFIG_SPI=y
+# Enable logging for debugging purposes
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4  # Set log level to 'debug'
 
-CONFIG_SENSOR=y
+# Enable threads
+CONFIG_THREAD_MONITOR=y
+CONFIG_THREAD_STACK_INFO=y
+CONFIG_THREADS_PRIO_DEFAULT=7  # Default priority for threads
 
-# Se vuoi escludere i driver reali:
-CONFIG_DHT=n
-CONFIG_BH1750=n
-
-# Abilita ADC solo se serve per sensori reali soil moisture
-CONFIG_ADC=n
-
-CONFIG_PM=y
+# Enable power management features
+CONFIG_PM=y  # Enable power management (needed for low-power state)
 CONFIG_PM_DEVICE=y
-CONFIG_PM_DEVICE_SYSTEM_MANAGED=y
+CONFIG_PM_SLEEP=y
 
-CONFIG_SHELL=y
-CONFIG_SHELL_BACKEND_SERIAL=y
-CONFIG_SHELL_HISTORY=y
-CONFIG_SHELL_CMDS_RESIZE=y
+# Enable sensor support (for the DHT sensor)
+CONFIG_SENSOR=y
+CONFIG_SENSOR_DHT=y  # Enable DHT sensor driver (ensure compatibility with your sensor)
+CONFIG_SENSOR_DHT11=y  # Specify the sensor type (DHT11 or DHT22)
 
-CONFIG_LORA=y
-CONFIG_LORA_SHELL=y
+# Enable SPI (for LoRa communication)
+CONFIG_SPI=y
+CONFIG_SPI_ESP32=y  # Enable ESP32-specific SPI configuration
+CONFIG_SPI_MAX_FREQUENCY=1000000  # Adjust SPI frequency based on your device
 
-CONFIG_MOCK_SENSOR=y
+# Enable LoRa functionality
+CONFIG_LORA=y  # Enable LoRa support
+CONFIG_LORA_MODEM_TYPE_SX1276=y  # Specify the LoRa modem type (adjust if using a different one)
+CONFIG_LORA_REGION=EU868  # Specify the LoRa region (adjust to your region)
+CONFIG_LORA_TX_POWER=14  # Set LoRa transmission power (adjust as needed)
+
+# Enable UART (for debugging)
+CONFIG_UART_CONSOLE=y  # Use UART console for logging
+
+# Enable random number generation (for fallback sensor data)
+CONFIG_ENTROPY_GENERATOR=y
+
+# Enable heap memory for dynamic memory allocation (used by rand())
+CONFIG_HEAP_MEM_POOL_SIZE=2048  # Adjust this size based on your application needs
+
+# Enable watchdog (to monitor system health)
+CONFIG_WATCHDOG=y
+CONFIG_WATCHDOG_TIMEOUT=60  # Set the watchdog timeout in seconds
+
+# Enable the ESP32-S3 specific options
+CONFIG_SOC_SERIES_ESP32_S3=y  # ESP32-S3 SoC configuration
+CONFIG_BOARD_ESP32S3_DEVKITC_1=y  # Use the ESP32-S3 DevKitC board
+
+# Debugging and assertions
+CONFIG_ASSERT=y  # Enable assertions for debugging
+CONFIG_DEBUG_OPTIMIZATIONS=n  # Disable optimizations for debugging
+
+# Enable necessary features for Bluetooth or Wi-Fi (if required)
+# CONFIG_WIFI=y  # Uncomment if using Wi-Fi
+# CONFIG_BT=y    # Uncomment if using Bluetooth
 
