--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -1,23 +1,25 @@
-# Logging
+# General logging
 CONFIG_LOG=y
-CONFIG_LOG_BUFFER_SIZE=256
+CONFIG_LOG_MODE_DEFERRED=y
+CONFIG_LOG_BUFFER_SIZE=512
 
-# I2C (needed for SHT3XD and BH1750)
-CONFIG_I2C=y
-CONFIG_I2C_ESP32=y
+# Emul
+CONFIG_EMUL=y
 
-# Sensors
-CONFIG_SENSOR=y
-#CONFIG_SENSOR_EMUL=y
-#CONFIG_SHT3XD_EMUL=y
-#CONFIG_BH1750_EMUL=y
-#CONFIG_SHT3XD=y
-#CONFIG_BH1750=y
-
-# GPIO
+# GPIO + LEDs
 CONFIG_GPIO=y
 CONFIG_GPIO_EMUL=y
 
-# Device power management
-#CONFIG_PM=y
-#CONFIG_PM_DEVICE=y
+# I2C 
+CONFIG_I2C=y
+CONFIG_I2C_EMUL=y
+
+# Sensor drivers
+CONFIG_SENSOR=y
+CONFIG_SHT3XD=y
+CONFIG_BH1750=y
+
+CONFIG_STACK_POINTER_RANDOM=0
+CONFIG_TEST_RANDOM_GENERATOR=y
+CONFIG_TIMER_RANDOM_GENERATOR=y
+CONFIG_TEST_CSPRNG_GENERATOR=y
