--- a/zephyr-feasibility-emul/CMakeLists.txt
+++ b/zephyr-feasibility-emul/CMakeLists.txt
@@ -1,7 +1,7 @@
 # Minimum CMake version required
 cmake_minimum_required(VERSION 3.20.0)
 
-set(ZEPHYR_EXTRA_MODULES "{CMAKE_SOURCE_DIR}/modules/sensirion_sht3xd_emul")
+set(ZEPHYR_EXTRA_MODULES "${CMAKE_SOURCE_DIR}/modules/sensirion_sht3xd_emul")
 
 # Include Zephyr
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
