--- a/zephyr-feasibility-emul/prj.conf
+++ b/zephyr-feasibility-emul/prj.conf
@@ -1,24 +1,18 @@
 # General logging
 CONFIG_LOG=y
-CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_DEFAULT_LEVEL=4
-CONFIG_LOG_BUFFER_SIZE=512
-
-# Emul
-CONFIG_EMUL=y
-CONFIG_I2C=y
-CONFIG_I2C_EMUL=y
-
-# GPIO + LEDs
-CONFIG_GPIO=y
-CONFIG_GPIO_EMUL=y
 
 # Sensor drivers
 CONFIG_SENSOR=y
 CONFIG_SENSIRION_SHT3XD_EMUL=y
-CONFIG_SHT3XD=y
-#CONFIG_BH1750=y
 
+# Emul
+CONFIG_EMUL=y
+
+# I2C
+CONFIG_I2C=y
+
+# Random
 CONFIG_STACK_POINTER_RANDOM=0
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_TIMER_RANDOM_GENERATOR=y
