--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -3,22 +3,11 @@ CONFIG_LOG=y
 CONFIG_LOG_MODE_DEFERRED=y
 CONFIG_LOG_BUFFER_SIZE=512
 
-# Emul
-CONFIG_EMUL=y
-
 # GPIO + LEDs
 CONFIG_GPIO=y
 CONFIG_GPIO_EMUL=y
 
-# I2C 
-CONFIG_I2C=y
-CONFIG_I2C_EMUL=y
-
-# Sensor drivers
-CONFIG_SENSOR=y
-CONFIG_SHT3XD=y
-CONFIG_BH1750=y
-
+# Random
 CONFIG_STACK_POINTER_RANDOM=0
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_TIMER_RANDOM_GENERATOR=y
