Sensor Emulation Driver done. The key was to use both DEVICE_DT_DEFINE and EMUL_DT_DEFINE

--- a/zephyr-feasibility-emul/modules/sensirion_sht3xd_emul/dts/bindings/sensor/sensirion,sht3xd-emul.yaml
+++ b/zephyr-feasibility-emul/modules/sensirion_sht3xd_emul/dts/bindings/sensor/sensirion,sht3xd-emul.yaml
@@ -1,10 +1,6 @@
-compatible: "emul,sensirion,sht3xd"
-
-properties:
-  reg:
-    description: Emulator I2C address
-    type: int
-    required: true
-
 description: Emulator for Sensirion SHT3XD sensor
+
+compatible: "sensirion,sht3xd-emul"
+
+include: [sensor-device.yaml, i2c-device.yaml]
 
