--- a/zephyr-feasibility-emul/prj.conf
+++ b/zephyr-feasibility-emul/prj.conf
@@ -1,19 +1,27 @@
-# General logging
-CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4
-
-# Sensor drivers
-CONFIG_SENSOR=y
-CONFIG_SENSIRION_SHT3XD_EMUL=y
-
 # Emul
 CONFIG_EMUL=y
 
 # I2C
 CONFIG_I2C=y
+CONFIG_I2C_EMUL=y
+
+# Sensor drivers
+CONFIG_SENSOR=y
+CONFIG_SENSIRION_SHT3XD_EMUL=y
+
+#GPIO
+CONFIG_GPIO=y
+CONFIG_GPIO_EMUL=y
 
 # Random
 CONFIG_STACK_POINTER_RANDOM=0
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_TIMER_RANDOM_GENERATOR=y
 CONFIG_TEST_CSPRNG_GENERATOR=y
+
+# General logging
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+
+# Print Float
+CONFIG_CBPRINTF_FP_SUPPORT=y
