--- a/zephyr-feasibility-emul/prj.conf
+++ b/zephyr-feasibility-emul/prj.conf
@@ -7,6 +7,7 @@ CONFIG_I2C_EMUL=y
 
 # Sensor drivers
 CONFIG_SENSOR=y
+CONFIG_ROHM_BT1750_EMUL=y
 CONFIG_SENSIRION_SHT3XD_EMUL=y
 
 #GPIO
@@ -21,7 +22,7 @@ CONFIG_TEST_CSPRNG_GENERATOR=y
 
 # General logging
 CONFIG_LOG=y
-CONFIG_LOG_DEFAULT_LEVEL=4
+#CONFIG_LOG_DEFAULT_LEVEL=4
 
 # Print Float
 CONFIG_CBPRINTF_FP_SUPPORT=y
