Update because of wrong name sensor

--- a/zephyr-feasibility-emul/modules/rohm_bh1750_emul/drivers/rohm_bh1750_emul/CMakeLists.txt
+++ b/zephyr-feasibility-emul/modules/rohm_bh1750_emul/drivers/rohm_bh1750_emul/CMakeLists.txt
@@ -1,3 +1,3 @@
 zephyr_library()
-zephyr_library_sources(rohm_bt1750_emul.c)
+zephyr_library_sources(rohm_bh1750_emul.c)
 zephyr_include_directories(.)
