--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -63,7 +63,7 @@ nav:
   - 🔧 MVP - Prototipo minimo: mvp.md
   - 📊 Modelli agronomici: modelli.md
   - 📘 Richieste Enologi: enologo_requests.md
-  - 📋 Questionario validazione: questionario.md
+  - 📋 Questionario validazione: questionario.html
   - 📐 Requisiti Tecnici: requisiti.md
   - 📖 Glossario: glossario.md
   - 💬 FAQ: faq.md
