Major light sensor emul driver update to be close to real hardware

--- a/zephyr-feasibility-emul/prj.conf
+++ b/zephyr-feasibility-emul/prj.conf
@@ -9,6 +9,8 @@ CONFIG_I2C_EMUL=y
 CONFIG_SENSOR=y
 CONFIG_ROHM_BH1750_EMUL=y
 CONFIG_SENSIRION_SHT3XD_EMUL=y
+#CONFIG_ROHM_BH1750=y
+#CONFIG_SENSIRION_SHT3XD=y
 
 #GPIO
 CONFIG_GPIO=y
