--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -57,14 +57,21 @@ markdown_extensions:
   - pymdownx.tilde
 
 nav:
-  - 🍇 Introduzione: index.md
-  - 💡 Idea progettuale: idea.md
-  - 🛣️ Roadmap progettuale: roadmap.md
-  - 🔧 MVP - Prototipo minimo: mvp.md
-  - 📊 Modelli agronomici: modelli.md
-  - 📘 Richieste Enologi: enologo_requests.md
-  - 📋 Questionario validazione: questionario.html
-  - 📐 Requisiti Tecnici: requisiti.md
-  - 📖 Glossario: glossario.md
-  - 💬 FAQ: faq.md
+  - 🍇 Visione e Obiettivi:
+      - 📘 Introduzione: README.md
+      - 💡 Idea progettuale: idea.md
+      - 🛣️ Roadmap progettuale: roadmap.md
 
+  - 🎯 Applicazioni in Campo:
+      - 🔧 MVP - Prototipo minimo: mvp.md
+      - 📊 Modelli agronomici: modelli.md
+      - 📘 Richieste Enologi: enologo_requests.md
+      - 📋 Questionario validazione: questionario.html
+
+  - ⚙️ Specifiche Tecniche:
+      - 📐 Requisiti Tecnici: requisiti.md
+
+  - 📚 Risorse Aggiuntive:
+      - 💬 FAQ - Domande Frequenti: faq.md
+      - 📖 Glossario: glossario.md
+    
