--- a/zephyr-feasibility/CMakeLists.txt
+++ b/zephyr-feasibility/CMakeLists.txt
@@ -1,6 +1,11 @@
 # Minimum CMake version required
 cmake_minimum_required(VERSION 3.20.0)
 
+set(ZEPHYR_EXTRA_MODULES
+  "${CMAKE_SOURCE_DIR}/modules/sensirion_sht3xd_emul"
+  "${CMAKE_SOURCE_DIR}/modules/rohm_bh1750_emul"
+)
+
 # Include Zephyr
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
@@ -12,9 +17,6 @@ project(
   LANGUAGES C
 )
 
-#target_include_directories(app PRIVATE include)
-
 # Add main source file
 target_sources(app PRIVATE src/main.c)
 
-target_include_directories(app PRIVATE ${ZEPHYR_BASE}/include)
