--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -1,9 +1,18 @@
-# General logging
-CONFIG_LOG=y
-CONFIG_LOG_MODE_DEFERRED=y
-CONFIG_LOG_BUFFER_SIZE=512
+# Emul
+CONFIG_EMUL=y
 
-# GPIO + LEDs
+# I2C
+CONFIG_I2C=y
+CONFIG_I2C_EMUL=y
+
+# Sensor drivers
+CONFIG_SENSOR=y
+CONFIG_ROHM_BH1750_EMUL=y
+CONFIG_SENSIRION_SHT3XD_EMUL=y
+#CONFIG_BH1750=y
+#CONFIG_SHT3XD=y
+
+#GPIO
 CONFIG_GPIO=y
 CONFIG_GPIO_EMUL=y
 
@@ -12,3 +21,10 @@ CONFIG_STACK_POINTER_RANDOM=0
 CONFIG_TEST_RANDOM_GENERATOR=y
 CONFIG_TIMER_RANDOM_GENERATOR=y
 CONFIG_TEST_CSPRNG_GENERATOR=y
+
+# General logging
+CONFIG_LOG=y
+#CONFIG_LOG_DEFAULT_LEVEL=4
+
+# Print Float
+CONFIG_CBPRINTF_FP_SUPPORT=y
