Integration with sx1262 emulation

--- a/zephyr-feasibility/prj.conf
+++ b/zephyr-feasibility/prj.conf
@@ -5,12 +5,21 @@ CONFIG_EMUL=y
 CONFIG_I2C=y
 CONFIG_I2C_EMUL=y
 
+# SPI
+CONFIG_SPI=y
+CONFIG_SPI_EMUL=y
+
 # Sensor drivers
 CONFIG_SENSOR=y
 CONFIG_ROHM_BH1750_EMUL=y
 CONFIG_SENSIRION_SHT3XD_EMUL=y
 #CONFIG_BH1750=y
 #CONFIG_SHT3XD=y
+
+# LoRa
+#CONFIG_LORA_SX126X=y
+CONFIG_SX1262_EMUL=y
+#CONFIG_LORA_LOG_LEVEL=4
 
 #GPIO
 CONFIG_GPIO=y
