--- a/zephyr-feasibility/CMakeLists.txt
+++ b/zephyr-feasibility/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.20.0)
 set(ZEPHYR_EXTRA_MODULES
   "${CMAKE_SOURCE_DIR}/modules/sensirion_sht3xd_emul"
   "${CMAKE_SOURCE_DIR}/modules/rohm_bh1750_emul"
+  "${CMAKE_SOURCE_DIR}/modules/sx1262_emul"
 )
 
 # Include Zephyr
