--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,7 +6,7 @@ edit_uri: edit/main/
 theme:
   name: material
   language: it
-  logo: images/banner.png
+  logo: images/banner3.png
   favicon: images/banner.ico
   font:
     text: Roboto
